# ComplianceStack

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LEGAL-CITATION-AUDIT.md  LICENSE  LICENSE.md  MCP-SERVER-STATUS.md  NOTICE  PORTFOLIO.md  README.md  SECURITY.md  auth_testing.md  docker-compose.test.yml  docker-compose.yml  dump.rdb  mcp-registry.json  package-lock.json  package.json
python-backend/: main.py  pyproject.toml
python-backend/alembic/: env.py
python-backend/db/: neo4j_client.py  postgres.py  user_store.py
python-backend/middleware/: __init__.py  body_size_limit.py  pii_middleware.py  rate_limit.py  rbac.py  request_id.py
python-backend/models/: schemas.py  verifiable_credential.py
python-backend/routers/: adversarial.py  agent_autonomy.py  agent_trust.py  auth.py  bias.py  certificate.py  crl.py  dpdp.py  dpia.py  drift.py  dsar.py  human_oversight.py  prompt_audit.py  rag_quality.py  risk.py  ropa.py  scoring.py  session_memory.py  supply_chain.py  tool_permissions.py
python-backend/services/: adversarial_tester.py  agent_autonomy_classifier.py  agent_trust_auditor.py  auth.py  bias_engine.py  crypto_signer.py  data_discovery.py  drift_detector.py  erasure_chain.py  evidence_store.py  key_provider.py  merkle_audit.py  neo4j_queries.py  pii_redactor.py  prompt_template_auditor.py  rag_quality_auditor.py  redis_webhook.py  session_memory_auditor.py  timestamping.py  tool_permission_auditor.py
python-backend/tests/: conftest.py  test_adversarial.py  test_agent_autonomy.py  test_agent_trust.py  test_auth_integration.py  (+13 more)
(+71 files in other folders)
